# mini-kit

./: AGENTS.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: publish.yml  tests.yml
docs/: builder.md  config.md  index.md  trainer.md
src/mini/builder/: README.md  __init__.py  builder.py
src/mini/config/: README.md  __init__.py  config.py
src/mini/trainer/: README.md  __init__.py  hooks.py  trainer.py  utils.py
tests/: test_builder.py  test_config_loader.py  test_config_utils.py  test_indexed_tar.py  test_sharded_indexed_tar.py  test_sitar.py  test_trainer_utils.py
