[project]
name = "minidlp"
version = "0.1.0"
description = "Mini deep learning primitives"
readme = "README.md"
authors = [
    { name = "Karim Abou Zeid", email = "contact@ka.codes" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
config = [
    "black>=22.1.0",
]
trainer = [
    "torch>=2.0.0",
    "wandb>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
