[project]
name = "mini-kit"
version = "0.1.0"
description = "Small self-contained micro packages for deep learning codebases."
readme = "README.md"
authors = [
    { name = "Karim Abou Zeid", email = "contact@ka.codes" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
config = [
    "black>=22.1.0",
]
trainer = [
    "pillow>=11.3.0",
    "torch>=2.0.0",
    "wandb>=0.20.1",
]
all = [
    "black",
    "pillow",
    "torch",
    "wandb",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true
module-name = ""  # https://github.com/astral-sh/uv/issues/14435#issuecomment-3031586558

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
